--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Suggests: 
-    testthat (>= 3.0.0)
+Suggests:
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown,
+    ggplot2,
+    pkgdown
+VignetteBuilder: knitr
 Config/testthat/edition: 3
+URL: http://www.shauritahutchins.com/harlem/
