--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -1,76 +1,95 @@
-name: 'check-r-package'
-description: 'Action to check R package with rcmdcheck. Assumes that rcmdcheck has already been installed.'
-author: 'Jim Hester'
-inputs:
-  args:
-    description: 'Arguments to pass to the `args` parameter of rcmdcheck. Must be an R expression. Note that it often needs to be quoted in YAML, see the README for details.'
-    default: 'c("--no-manual", "--as-cran")'
-  build_args:
-    description: 'Arguments to pass to the `build_args` parameter of rcmdcheck. Note that it often needs to be quoted in YAML, see the README for details.'
-    default: '"--no-manual"'
-  error-on:
-    description: 'What type of result should cause a build error? Note that it often needs to be quoted in YAML, see the README for details.'
-    default: '"warning"'
-  check-dir:
-    description: 'Where should the check output go? Note that it often needs to be quoted in YAML, see the README for details.'
-    default: '"check"'
-  working-directory:
-    description: 'Using the working-directory keyword, you can specify the working directory of where "rcmdcheck::rcmdcheck" is run.'
-    default: '.'
-  upload-snapshots:
-    description: |
-      Whether to upload all testthat snapshots as an artifact. Possible values are 'true',
-      'false', 'always'.
-    default: false
-  upload-results:
-    description: |
-      Whether to upload check results for successful runs too. If 'never',
-      then it does not upload the results, even on failure.
-    default: false
-  artifact-name:
-    description: |
-      Use this to override the default artifact name for the check results.
-  snapshot-artifact-name:
-    description: |
-      Use this to override the default artifact name for testthat snapshots.
+name: R-CMD-check
 
-runs:
-  using: "composite"
-  steps:
-    - name: Check
-      id: rcmdcheck
-      run: |
-        ## --------------------------------------------------------------------
-        options(crayon.enabled = TRUE)
-        cat("LOGNAME=", Sys.info()[["user"]], "\n", sep = "", file = Sys.getenv("GITHUB_ENV"), append = TRUE)
-        if (Sys.getenv("_R_CHECK_FORCE_SUGGESTS_", "") == "") Sys.setenv("_R_CHECK_FORCE_SUGGESTS_" = "false")
-        if (Sys.getenv("_R_CHECK_CRAN_INCOMING_", "") == "") Sys.setenv("_R_CHECK_CRAN_INCOMING_" = "false")
-        cat("check-dir-path=", file.path(getwd(), (${{ inputs.check-dir }})), "\n", file = Sys.getenv("GITHUB_OUTPUT"), sep = "", append = TRUE)
-        check_results <- rcmdcheck::rcmdcheck(args = (${{ inputs.args }}), build_args = (${{ inputs.build_args }}), error_on = (${{ inputs.error-on }}), check_dir = (${{ inputs.check-dir }}))
-      shell: Rscript {0}
-      working-directory: ${{ inputs.working-directory }}
+on:
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
-    - name: Show testthat output
-      if: always()
-      run: |
-        ## --------------------------------------------------------------------
-        echo ::group::Show testthat output
-        find check -name 'testthat.Rout*' -exec cat '{}' \; || true
-        echo ::endgroup::
-      shell: bash
-      working-directory: ${{ inputs.working-directory }}
+env:
+  R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+  RSPM: ${{ matrix.config.rspm }}
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload check results
-      if: ${{ (failure() && inputs.upload-results != 'never') || (inputs.upload-results != 'false' && inputs.upload-results != 'never') }}
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ inputs.artifact-name || format('{0}-{1}-r{2}-{3}-results', runner.os, runner.arch, matrix.config.r, matrix.config.id || strategy.job-index ) }}
-        path: ${{ steps.rcmdcheck.outputs.check-dir-path }}
+jobs:
+  R-CMD-check:
+    runs-on: ${{ matrix.config.os }}
 
-    - name: Upload snapshots
-      if: ${{ (failure() && inputs.upload-snapshots == 'always') || inputs.upload-snapshots != 'false' }}
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ inputs.snapshot-artifact-name || format('{0}-{1}-r{2}-{3}-testthat-snapshots', runner.os, runner.arch, matrix.config.r, matrix.config.id || strategy.job-index ) }}
-        path: ${{ steps.rcmdcheck.outputs.check-dir-path }}/**/tests*/testthat/_snaps
-        if-no-files-found: ignore
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+          - {os: windows-latest, r: 'release'}
+          - {os: macOS-latest, r: 'release'}
+          - {os: ubuntu-latest, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"}
+          - {os: ubuntu-latest, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-tinytex@v2
+        if: needs.build-vignettes
+
+      - name: Query dependencies
+        run: |
+          install.packages('remotes')
+          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
+          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
+        shell: Rscript {0}
+
+      - name: Cache R packages
+        if: runner.os != 'Windows'
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements(os = "ubuntu", package = "harlem"))')
+
+      - name: Install dependencies
+        run: |
+          remotes::install_deps(dependencies = TRUE)
+          remotes::install_cran("rcmdcheck")
+        shell: Rscript {0}
+
+      - name: Session info
+        run: |
+          options(width = 100)
+          pkgs <- installed.packages()[, "Package"]
+          sessioninfo::session_info(after = c("remotes", "rcmdcheck"))
+        shell: Rscript {0}
+
+      - name: Check
+        env:
+          _R_CHECK_CRAN_INCOMING_REMOTE_: false
+          _R_CHECK_FORCE_SUGGESTS_: false
+        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
+        shell: Rscript {0}
+
+      - name: Show testthat output
+        if: always()
+        run: find check -name 'testthat.Rout*' -exec cat '{}' \;
+        shell: bash
+
+      - name: Upload check results
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
+          path: check
