--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -24,7 +24,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/check-standard@v1
+      - uses: r-lib/actions/setup-r@v2
         with:
-          error-on: warning
-          args: --no-manual --as-cran 
+          r-version: ${{ matrix.config.r }}
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-tinytex@v2
+        if: needs.build-vignettes
+
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          args: --no-manual --as-cran
+          error-on: warning 
