--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main, master ]
 
+env:
+  R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+  RSPM: ${{ matrix.config.rspm }}
+
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
@@ -33,11 +37,25 @@ jobs:
       - uses: r-lib/actions/setup-tinytex@v2
         if: needs.build-vignettes
 
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements(os = "ubuntu", package = "harlem"))')
+
       - name: Install dependencies
         run: |
           install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
           install.packages("rcmdcheck")
+          if (!requireNamespace("rcmdcheck", quietly = TRUE)) {
+            cat("Available packages:\n")
+            print(installed.packages()[, "Package"])
+            stop("Failed to install rcmdcheck")
+          }
+          cat("rcmdcheck version:", packageVersion("rcmdcheck"), "\n")
         shell: Rscript {0}
 
       - name: Check
