--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -8,13 +8,15 @@ on:
 
 env:
   R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-  RSPM: ${{ matrix.config.rspm }}
 
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+
+    env:
+      RSPM: ${{ matrix.config.rspm }}
 
     strategy:
       fail-fast: false
