--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -8,7 +8,6 @@ on:
 
 env:
   R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-  RSPM: ${{ matrix.config.rspm }}
   GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
@@ -16,6 +15,9 @@ jobs:
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+
+    env:
+      RSPM: ${{ matrix.config.rspm }}
 
     strategy:
       fail-fast: false
@@ -32,7 +34,6 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
 
       - uses: r-lib/actions/setup-pandoc@v2
 
