--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -67,6 +67,12 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+          if (!requireNamespace("rcmdcheck", quietly = TRUE)) {
+            cat("Available packages:\n")
+            print(installed.packages()[, "Package"])
+            stop("Failed to install rcmdcheck")
+          }
+          cat("rcmdcheck version:", as.character(packageVersion("rcmdcheck")), "\n")
         shell: Rscript {0}
 
       - name: Session info
