--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -79,7 +79,7 @@ jobs:
         run: |
           options(width = 100)
           pkgs <- installed.packages()[, "Package"]
-          sessioninfo::session_info(after = c("remotes", "rcmdcheck"))
+          sessioninfo::session_info()
         shell: Rscript {0}
 
       - name: Check
